examples/logfiles/optimization_log_20251209_153143.txt
=== Optimization started at 2025-12-09 15:31:43.455096 ===

Starting configurable BPSO optimization with parameters:
Frequency: 28 GHz
Bandwidth: 20 GHz
Unit cell size: 3 mm
Substrate thickness: 0.8 mm
Pixel grid: 12×12
MSE threshold: 1e-07
Transfer function: v_shape

Iter | Best f(x) | Mean f(x) | Stall | Inertia | Diversity
----------------------------------------------------------
Clearing COM object cache...
COM cache refreshed successfully

Running CST simulation...
CPA: The specified project does not exist. A new project hasbeen created.
Do not forget to use CST_MicrowaveStudio.saveFile() to save your project.
Error in CST simulation: 'Solver' object has no attribute 'SetNumberOfResultDataSamples'
CST file closed
Clearing COM object cache...
COM cache refreshed successfully
Current MSE: inf
COM cache refreshed successfully

Running CST simulation...
CPA: The specified project does not exist. A new project hasbeen created.
Do not forget to use CST_MicrowaveStudio.saveFile() to save your project.
Error in CST simulation: 'Solver' object has no attribute 'SetNumberOfResultDataSamples'
CST file closed
COM cache refreshed successfully
Current MSE: inf
COM cache refreshed successfully

Running CST simulation...
COM cache refreshed successfully
Traceback (most recent call last):
  File "E:\GOPAL\cst_python_api_Filter\examples\flip_vshape_polins_LD_dataset_2", line 1068, in <module>
    results = pyoptimize_te(inputparameters)
  File "E:\GOPAL\cst_python_api_Filter\examples\flip_vshape_polins_LD_dataset_2", line 1004, in pyoptimize_te
    optimizer = ConfigurableBPSO(
        fun=pso_cost_fn,
        nvars=nvars,
        config=config
    )
  File "E:\GOPAL\cst_python_api_Filter\examples\flip_vshape_polins_LD_dataset_2", line 511, in __init__
    self._initialize_swarm()
    ~~~~~~~~~~~~~~~~~~~~~~^^
  File "E:\GOPAL\cst_python_api_Filter\examples\flip_vshape_polins_LD_dataset_2", line 554, in _initialize_swarm
    self._evaluate_swarm()
    ~~~~~~~~~~~~~~~~~~~~^^
  File "E:\GOPAL\cst_python_api_Filter\examples\flip_vshape_polins_LD_dataset_2", line 563, in _evaluate_swarm
    fitness = self.fun(x)
  File "E:\GOPAL\cst_python_api_Filter\examples\flip_vshape_polins_LD_dataset_2", line 383, in __call__
    te, freq, S = calculate_pcr(full_matrix, self.inputparameters)
                  ~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "E:\GOPAL\cst_python_api_Filter\examples\flip_vshape_polins_LD_dataset_2", line 271, in calculate_pcr
    myCST = cpa.CST_MicrowaveStudio(context.dataFolder, projectName + ".cst")
  File "C:\Users\IDARE_ECE\AppData\Local\Programs\Python\Python313\Lib\site-packages\cst_python_api\CST_MicrowaveStudio.py", line 76, in __init__
    self.__openFile(folder, filename)
    ~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^
  File "C:\Users\IDARE_ECE\AppData\Local\Programs\Python\Python313\Lib\site-packages\cst_python_api\CST_MicrowaveStudio.py", line 151, in __openFile
    self.__MWS = self.__CST.NewMWS()
                 ~~~~~~~~~~~~~~~~~^^
  File "C:\Users\IDARE_~1\AppData\Local\Temp\gen_py\3.13\EDD3E836-F537-4C6F-BE7D-6014C155CC7Bx0x1x0\IApplication.py", line 94, in NewMWS
KeyboardInterrupt
Traceback (most recent call last):
  File "E:\GOPAL\cst_python_api_Filter\examples\flip_vshape_polins_LD_dataset_2", line 1068, in <module>
    results = pyoptimize_te(inputparameters)
  File "E:\GOPAL\cst_python_api_Filter\examples\flip_vshape_polins_LD_dataset_2", line 1004, in pyoptimize_te
    optimizer = ConfigurableBPSO(
        fun=pso_cost_fn,
        nvars=nvars,
        config=config
    )
  File "E:\GOPAL\cst_python_api_Filter\examples\flip_vshape_polins_LD_dataset_2", line 511, in __init__
    self._initialize_swarm()
    ~~~~~~~~~~~~~~~~~~~~~~^^
  File "E:\GOPAL\cst_python_api_Filter\examples\flip_vshape_polins_LD_dataset_2", line 554, in _initialize_swarm
    self._evaluate_swarm()
    ~~~~~~~~~~~~~~~~~~~~^^
  File "E:\GOPAL\cst_python_api_Filter\examples\flip_vshape_polins_LD_dataset_2", line 563, in _evaluate_swarm
    fitness = self.fun(x)
  File "E:\GOPAL\cst_python_api_Filter\examples\flip_vshape_polins_LD_dataset_2", line 383, in __call__
    te, freq, S = calculate_pcr(full_matrix, self.inputparameters)
                  ~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "E:\GOPAL\cst_python_api_Filter\examples\flip_vshape_polins_LD_dataset_2", line 271, in calculate_pcr
    myCST = cpa.CST_MicrowaveStudio(context.dataFolder, projectName + ".cst")
  File "C:\Users\IDARE_ECE\AppData\Local\Programs\Python\Python313\Lib\site-packages\cst_python_api\CST_MicrowaveStudio.py", line 76, in __init__
    self.__openFile(folder, filename)
    ~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^
  File "C:\Users\IDARE_ECE\AppData\Local\Programs\Python\Python313\Lib\site-packages\cst_python_api\CST_MicrowaveStudio.py", line 151, in __openFile
    self.__MWS = self.__CST.NewMWS()
                 ~~~~~~~~~~~~~~~~~^^
  File "C:\Users\IDARE_~1\AppData\Local\Temp\gen_py\3.13\EDD3E836-F537-4C6F-BE7D-6014C155CC7Bx0x1x0\IApplication.py", line 94, in NewMWS
KeyboardInterrupt
